crates/hir/src/tests/snapshots/func_call_mix1.snap
---
source: crates/hir/src/tests.rs
assertion_line: 119
expression: "(test[1], res)"
---
- "\nfn main() {\n    foo()\n}\n\nfn foo() {}\n\nfn bar() {\n    foo()\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        Call:
                          name: _foo~void
                          args: []
                          ty: Void
                  ty: Void
      - Stmt:
          Fn:
            proto:
              name: _foo~void
              args: []
              ret_ty: Void
              is_extern: false
            body:
              Expr:
                Block:
                  list: []
                  ty: Void
      - Stmt:
          Fn:
            proto:
              name: _bar~void
              args: []
              ret_ty: Void
              is_extern: false
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        Call:
                          name: _foo~void
                          args: []
                          ty: Void
                  ty: Void

