crates/hir/src/tests/snapshots/func_call_recursive.snap
---
source: crates/hir/src/tests.rs
assertion_line: 119
expression: "(test[1], res)"
---
- "\nfn foo() {\n    foo()\n}\n\nfn main() {\n    foo()\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: _foo~void
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: _foo~void
                          args: []
                          ty: Void
                  ty: Void
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: _foo~void
                          args: []
                          ty: Void
                  ty: Void

