crates/hir/src/tests/snapshots/func_redefine_fn.snap
---
source: crates/hir/src/tests.rs
assertion_line: 30
expression: "(test[1], res)"
---
- "\nfn foo() {}\nfn bar() {}\nfn foo() {}\n"
- Err: "Function `foo` can't be redefined"

